data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4054.wast
;; 3. **Test Description**: Use `call_indirect` with a valid function type but provide insufficient arguments on the stack. The referred function tries to call `unreachable` if arguments are missing.    - **Constraint Checked**: Correct operand stack handling during indirect function call.    - **Unreachable Code Execution**: Ensures a trap due to stack underflow, preventing the `unreachable` code path.

(assert_invalid
  (module
    (type (func (param i32) (param i32)))
    (table 0 funcref)
    (func $insufficient-arguments (call_indirect (type 0) (i32.const 0)))
  )
  "type mismatch"
)